Update dependency versions
Change to java 11