@@ -6,21 +6,20 @@
   <groupId>de.dealog</groupId>
   <artifactId>dealog-message-generator</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
+    <dealog-common.version>1.0.0-SNAPSHOT</dealog-common.version>
+    <lombok.version>1.18.16</lombok.version>
+    <maven.compiler.version>3.8.1</maven.compiler.version>
     <maven.compiler.parameters>true</maven.compiler.parameters>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <quarkus-plugin.version>1.6.1.Final</quarkus-plugin.version>
     <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-    <quarkus.platform.version>1.6.1.Final</quarkus.platform.version>
-    <surefire-plugin.version>2.22.1</surefire-plugin.version>
-    <lombok.version>1.18.2</lombok.version>
-    <dealog-common.version>1.0.0-SNAPSHOT</dealog-common.version>
+    <quarkus.platform.version>1.8.3.Final</quarkus.platform.version>
+    <quarkus-plugin.version>1.8.3.Final</quarkus-plugin.version>
+    <surefire-plugin.version>2.22.2</surefire-plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -77,6 +76,7 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
@@ -92,8 +92,12 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${compiler-plugin.version}</version>
+        <version>${maven.compiler.version}</version>
+        <configuration>
+          <release>${maven.compiler.release}</release>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -103,6 +107,9 @@
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <maven.home>${maven.home}</maven.home>
           </systemPropertyVariables>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
@@ -120,6 +127,11 @@
           <plugin>
             <artifactId>maven-failsafe-plugin</artifactId>
             <version>${surefire-plugin.version}</version>
+            <configuration>
+              <argLine>
+                --illegal-access=permit
+              </argLine>
+            </configuration>
             <executions>
               <execution>
                 <goals>
